--- a/Test Stress/style.css
+++ b/Test Stress/style.css
@@ -227,3 +227,13 @@ img {
 	padding-left: 5px;
 	padding-right: 5px;
 }
+
+@media only screen and (max-width: 754px) {
+	#directions {
+	column-count: 1;
+	column-gap: 0;
+	}
+	.coll {
+	width: 100%;
+	}
+}
