--- a/style.css
+++ b/style.css
@@ -1,382 +1,20 @@
-@font-face {
-	font-family: "Drafting";
-	src: url("https://indestructibletype.com/Drafting/Drafting[wght].ttf") format("truetype");
-	font-style: normal;
-}
-
-@font-face {
-	font-family: "Drafting";
-	src: url("https://indestructibletype.com/Drafting/Drafting-Italic[wght].ttf") format("truetype");
-	font-style: italic;
-}
-
 body {
-	background-color: #fffcf7;
-	color: #15141e;
-	font-family: Drafting;
+ font-family: "Jost", sans; 
+ color: #333333;
+ background-color: #F2F2F2;
+ padding-left: 10%;
+ padding-right: 10%;
 }
 
 h1 {
-	text-align: center;
-	text-transform: uppercase;
-	font-weight: 600;
+ line-height: 0.8;
 }
 
-table#crossword {
-	border-collapse: collapse;
-	width: 500px;
-	height: 500px;
-	box-shadow: 6px 6px #15141e;
-	margin: auto;
-	margin-top: 50px;
-	margin-bottom: 50px;
-}
-
-table#crossword td {
-	border: 2px solid #15141e;
-	text-align: center;
-	text-transform: lowercase;
-	font-feature-settings: "smcp" on;
-	width: 0;
-	font-size: 70px;
-	font-weight: 350;
-	width: 20%;
-	height: 20%;
-	cursor: text;
-}
-
-table#crossword td:nth-child(1n).solved {
-	background-color: #c6fe9a;
-}
-
-td::selection {
-	background: none;
-}
-
-td::-moz-selection {
-	background: none;
-}
-
-#crossword td.focus, #crossword.down1 td:nth-child(1n).focus, #crossword.down2 td:nth-child(1n).focus, #crossword.down3 td:nth-child(1n).focus, #crossword.down4 td:nth-child(1n).focus, #crossword.down0 td:nth-child(1n).focus {
-	background-color: #fff5b1;
-}
-
-#crossword.across1 tr:nth-child(1), #crossword.across2 tr:nth-child(2), #crossword.across3 tr:nth-child(3), #crossword.across4 tr:nth-child(4), #crossword.across5 tr:nth-child(5), #crossword.down1 td:nth-child(1), #crossword.down2 td:nth-child(2), #crossword.down3 td:nth-child(3), #crossword.down4 td:nth-child(4), #crossword.down0 td:nth-child(5) {
-	background-color: #cce5ff;
-}
-
-#crossword tr:nth-child(1) :nth-child(1)::before {
-	content: "\00B9";
-	float: left;
-	position: absolute;
-	font-size: 40px;
-	margin-top: -10px;
-	margin-left: -25px;
-	font-weight: 450;
-}
-
-#crossword tr:nth-child(1) :nth-child(2)::before {
-	content: "\00B2";
-	float: left;
-	position: absolute;
-	font-size: 40px;
-	margin-top: -10px;
-	margin-left: -25px;
-	font-weight: 450;
-}
-
-#crossword tr:nth-child(1) :nth-child(3)::before {
-	content: "\00B3";
-	float: left;
-	position: absolute;
-	font-size: 40px;
-	margin-top: -10px;
-	margin-left: -25px;
-	font-weight: 450;
-}
-
-#crossword tr:nth-child(1) :nth-child(4)::before {
-	content: "\2074";
-	float: left;
-	position: absolute;
-	font-size: 40px;
-	margin-top: -10px;
-	margin-left: -25px;
-	font-weight: 450;
-}
-
-#crossword tr:nth-child(1) :nth-child(5)::before {
-	content: "\2075";
-	float: left;
-	position: absolute;
-	font-size: 40px;
-	margin-top: -10px;
-	margin-left: -25px;
-	font-weight: 450;
-}
-
-#crossword tr:nth-child(2) :nth-child(1)::before {
-	content: "\2076";
-	float: left;
-	position: absolute;
-	font-size: 40px;
-	margin-top: -10px;
-	margin-left: -25px;
-	font-weight: 450;
-}
-
-#crossword tr:nth-child(3) :nth-child(1)::before {
-	content: "\2077";
-	float: left;
-	position: absolute;
-	font-size: 40px;
-	margin-top: -10px;
-	margin-left: -25px;
-	font-weight: 450;
-}
-
-#crossword tr:nth-child(4) :nth-child(1)::before {
-	content: "\2078";
-	float: left;
-	position: absolute;
-	font-size: 40px;
-	margin-top: -10px;
-	margin-left: -25px;
-	font-weight: 450;
-}
-
-#crossword tr:nth-child(5) :nth-child(1)::before {
-	content: "\2079";
-	float: left;
-	position: absolute;
-	font-size: 40px;
-	margin-top: -10px;
-	margin-left: -25px;
-	font-weight: 450;
-}
-
-#across, #down {
-	width: 264px;
-	float: left;
-	font-size: 20px;
-	line-height: 1.5em;
-	padding-left: 36px;
-	margin: 1em;
-}
-
-#across {
-	margin-left: calc(50vw - 300px);
-}
-
-#across p, #down p {
-	width: 264px;
-	margin: auto;
-	margin-top: 0;
-	margin-bottom: 0;
-	text-indent: -36px;
-}
-
-#across.across1 p:nth-child(2), #across.across2 p:nth-child(3), #across.across3 p:nth-child(4), #across.across4 p:nth-child(5), #across.across5 p:nth-child(6), #down.down1 p:nth-child(2), #down.down2 p:nth-child(3), #down.down3 p:nth-child(4), #down.down4 p:nth-child(5), #down.down0 p:nth-child(6) {
-	background-color: #cce5ff;
-	box-shadow: -5px 0 #cce5ff, -43px 30px #fffcf7, -43px 0 #fff5b1;
-}
-
-#across p:nth-child(n).solved, #down p:nth-child(n).solved {
-	background-color: #c6fe9a;
-	box-shadow: -5px 0 #c6fe9a, -43px 30px #fffcf7, -43px 0 #c6fe9a;
+h2 {
+ font-family: "Jost", sans;
+ font-weight: 500;
 }
 
 a {
-	color: inherit;
-	text-decoration: none;
-}
-
-table#crosswordPicker {
-	border-collapse: collapse;
-	width: 500px;
-	height: 500px;
-	box-shadow: 6px 6px #15141e;
-	margin: auto;
-	margin-top: 50px;
-	margin-bottom: 50px;
-}
-
-table#crosswordPicker td {
-	border: 2px solid #15141e;
-	text-align: center;
-	text-transform: lowercase;
-	font-variant: small-caps;
-	font-size: 50px;
-	font-weight: 400;
-	width: 20%;
-	height: 20%;
-}
-
-table#crosswordPicker td:hover {
-	background-color: #fff5b1;
-}
-
-#explain p {
-	width: 620px;
-	font-size: 20px;
-	line-height: 1.5em;
-	margin: auto;
-	margin-top: 0;
-	margin-bottom: 0;
-}
-
-#solved, #settingbox {
-	background-color: rgba(255,252,247,0.5);
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100vw;
-	height: 100vh;
-}
-
-#solved div, #settingbox div {
-	background-color: #fffcf7;
-	box-shadow: 6px 6px #15141e;
-	border: 2px solid #15141e;
-	text-align: center;
-	font-size: 20px;
-	line-height: 1.5em;
-	width: 400px;
-	margin: auto;
-	margin-top: 30vh;
-}
-
-#settingbox div p {
-	text-align: left;
-	margin-bottom: -20px;
-	margin-left: 30px;
-}
-
-#settingbox div p b {
-	margin-left: -30px;
-	display: block;
-	text-align: center;
-}
-
-.invisable {
-	display: none;
-}
-
-button {
-	outline: none;
-	border: 2px solid #15141e;
-	box-shadow: 0px 0px #15141e;
-	background-color: transparent;
-	font-size: 20px;
-	margin: 1em;
-	padding-left: 0.5em;
-	padding-right: 0.5em;
-	transition: box-shadow 0.3s;
-	transition-timing-function: ease-out;
-	font-family: Drafting;
-}
-
-button:hover {
-	box-shadow: 3px 3px #15141e;
-}
-
-button:active {
-	box-shadow: 0px 0px #15141e;
-	transition: box-shadow 0s;
-}
-
-#mobilePreview {
-	display: none;
-}
-
-@media only screen and (max-width: 750px) {
-	#across, #explain {
-		margin-left: 1em;
-	}
-	#across, #down, #explain {
-		width: inherit;
-	}
-	#across p, #down p, #explain p {
-		width: inherit;
-		min-width: calc(100vw - 90px);
-	}
-	#mobilePreview {
-		display: block;
-		position: fixed;
-		bottom: 0;
-		left: 0;
-		background-color: #fffcf7;
-		border-top: solid #15141e 2px;
-		width: 100vw;
-	}
-	#mobilePreview.invisable {
-	display: none;
-	}
-	#mobilePreview p {
-		margin: 15px 15px 15px 56px;
-		text-indent: -36px;
-		font-size: 20px;
-		background-color: #cce5ff;
-		box-shadow: -5px 0 #cce5ff, -43px 30px #fffcf7, -43px 0 #fff5b1;
-	}
-	#down {
-		margin-bottom: 5em;
-	}
-}
-
-@media only screen and (max-width: 550px) {
-	table#crosswordPicker {
-		width: calc(100vw - 90px);
-		height: calc(100vw - 90px);
-	}
-	table#crosswordPicker td:nth-child(n) {
-		font-size: 8vw;
-	}
-	table#crossword:nth-child(n) {
-		width: calc(100vw - 90px);
-		height: calc(100vw - 90px);
-	}
-	#crossword tr:nth-child(n) :nth-child(n)::before{
-		margin-left: calc(-10vw + 33px);
-		margin-top: calc(-4.5vw + 19px);
-		font-size: 30px;
-	}
-	#solved div {
-		width: 70vw;
-	}
-}
-
-#dummyinput {
-	width: 0;
-	height: 0;
-	position: absolute;
-	cursor: default;
-	top: 100px;
-	opacity: 0;
-}
-
-#settings {
-	float: right;
-	margin-top: -2px;
-	margin-right: 10px;
-	width: 35px;
-	text-align: right;
-	cursor: pointer;
-}
-
-#backbutton {
-	float: left;
-	margin-top: -5px;
-	margin-left: 10px;
-	width: 35px;
-	text-align: right;
-	transform: rotate(180deg);
-}
-
-#settings:hover, #backbutton:hover {
-	opacity: 1;
-}
-
-.fade {
-	opacity: 0.15;
+ text-decoration: inherit;
 }
