--- a/crossword-squared/style.css
+++ b/crossword-squared/style.css
@@ -380,3 +380,10 @@ button:active {
 .fade {
 	opacity: 0.15;
 }
+
+#credits {
+	text-align: center;
+	font-size: 14px;
+	font-weight: 500;
+	margin-top: 5em;
+}
