--- a/homebuying/style.css
+++ b/homebuying/style.css
@@ -90,3 +90,106 @@ button {
 #programs {
 	display: none;
 }
+
+#photo {
+	width: 100vw;
+	height: 80vh;
+	background-image: url("pexels-photo-1128318.jpg");
+	background-size: cover;
+	background-position: 80% 30%;
+	margin-top: -30px;
+}
+
+#takeQuiz {
+	background-color: #D9531E;
+	width: 200px;
+	color: white;
+	cursor: pointer;
+	font-size: 25px;
+	text-align: center;
+	font-weight: bold;
+	border-radius: 10px;
+	padding: 10px;
+	position: absolute;
+	left: 20px;
+	bottom: 20vh;
+	box-shadow: 10px 10px 50px black;
+}
+
+@media screen and (max-width: 800px) {
+	#takeQuiz {
+		right: 20px;
+		left: inherit;
+	}
+}
+
+@media screen and (max-height: 800px) {
+	#takeQuiz {
+		right: 20px;
+		left: inherit;
+	}
+}
+
+
+#leftInfo {
+	color: white;
+	width: 40vw;
+	padding-top: 100px;
+	margin-left: 20px;
+	text-shadow: 0 0 10px black, 0 0 4px black;
+}
+
+#leftInfo h2 {
+	font-size: 26px;
+}
+
+#leftInfo p {
+	margin-top: 3vw;
+}
+
+#housePic {
+	background-image: url("pexels-photo-4044784.jpg");
+	background-size: cover;
+	background-position: 30% 30%;
+	width: calc(100vw - 450px);
+	float: left;
+	height: 360px;
+	text-shadow: 0 0 10px white, 0 0 3px white;
+}
+
+#programList {
+	width: 450px;
+	height: 360px;
+	float: left;
+}
+
+#programList h2 {
+	font-size: 26px;
+	margin-left: 50px;
+	margin-top: 0;
+	padding-top: 50px;
+}
+
+ul {
+	font-size: 26px;
+	margin-left: 50px;
+	line-height: 1.5;
+}
+
+#conclusion {
+	background-image: url("pexels-19773969.jpg");
+	background-size: cover;
+	background-position: center;
+	width: 100vw;
+	float: left;
+	height: 80vh;
+}
+
+#conclusion p {
+	color: black;
+	background-color: white;
+	padding: 30px;
+	max-width: 500px;
+	font-size: 20px;
+	margin-top: calc(80vh - 160px);
+}
